// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewStorage should create a view by name 1`] = `
TestView {
  "channelId": 123,
  "context": undefined,
  "info": Object {
    "fields": Array [
      ViewField {
        "initial": 0,
        "name": "startFrom",
      },
      ViewField {
        "initial": ViewField {
          "initial": 0,
          "name": "startFrom",
        },
        "name": "count",
      },
    ],
    "prototype": TestView {},
  },
  "metadata": Object {
    "messageIds": Array [
      456,
    ],
  },
}
`;

exports[`viewStorage should register a view and collect info about it fields 1`] = `
Map {
  "TestView" => Object {
    "fields": Array [
      ViewField {
        "initial": 0,
        "name": "startFrom",
      },
      ViewField {
        "initial": ViewField {
          "initial": 0,
          "name": "startFrom",
        },
        "name": "count",
      },
    ],
    "prototype": TestView {},
  },
}
`;
